# stratify

./: .env.development  .env.production  .gitignore  .vercel-deploy-trigger.txt  .vercel-trigger  BUGS-RESOLVED.md  CLAUDE.md  ORDER-TICKET-EXPLAINED.md  README.md  STRATIFY-STATUS.md  TWELVE-DATA-MIGRATION.md  fix-news-panel.py  index.html  package-lock.json  package.json  tailwind.config.js  test.html  vercel.json  vite.config.js
.husky/: pre-push
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
api/: account.js  alpaca-keys.js  article.js  backtest.js  bars.js  bluesky.js  broker-connect.js  broker-disconnect.js  btc-feed.js  chat.js  claude-signal.js  community-bot-action.js  confirm-checkout-session.js  contact.js  create-checkout-session.js  create-portal-session.js  (+63 more)
backend/: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  railway.toml  requirements.txt
backend/.github/: copilot-instructions.md
backend/alembic/: env.py
backend/api/: atlas.py  auth.py  chat.py  kalshi.py  market.py  news.py  notifications.py  public.py  social.py  users.py  webhooks.py  websocket.py
backend/core/: __init__.py  config.py  database.py  redis.py  security.py
backend/docs/: auth.md
backend/ml/: __init__.py  train.py
backend/ml/models/: .gitkeep
backend/models/: __init__.py  notification.py  social.py  trade.py  user.py
backend/schemas/: auth.py  market.py  notification.py  social.py  user.py
backend/services/: __init__.py  alpaca_service.py  kalshi_service.py  ml_inference_service.py  push_notification_service.py
backend/tests/: conftest.py  test_auth.py
backend/workers/: __init__.py  arbitrage_consumer.py  line_movement_consumer.py
(+493 files in other folders)
