[project]
name = "stratify-backend"
version = "0.1.0"
description = "Stratify - Finance Stock Scanning API Backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # FastAPI & Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    
    # Redis
    "redis>=5.0.1",
    
    # Kafka
    "aiokafka>=0.10.0",
    
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Validation & Settings
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    
    # Alpaca API
    "alpaca-py>=0.21.1",
    
    # Firebase (Push Notifications)
    "firebase-admin>=6.4.0",
    
    # ML
    "torch>=2.1.2",
    "numpy>=1.26.3",
    "pandas>=2.1.4",
    
    # HTTP Client
    "httpx>=0.26.0",
    
    # Anthropic (Claude AI)
    "anthropic>=0.40.0",
    
    # WebSockets
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "models", "schemas", "services", "workers", "ml"]

[tool.hatch.build.targets.sdist]
include = ["api", "core", "models", "schemas", "services", "workers", "ml", "main.py"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
